# structured-latent-text-refinement

./: .env.example  .gitignore  CITATION.cff  README.md  benchmark_rocstories.py  benchmark_speed.py  eval_text_metrics.py  pyproject.toml  requirements.txt
configs/: draft_prior.yaml  stage1.yaml  stage2.yaml
docs/: CODEx_CHANGELOG.md  DEEPSEEK_RLHF_RECORDS.md  STANDALONE.md
examples/: ablations.md  failure_cases.md  generated_samples-2.jsonl  generated_samples.jsonl  readable_samples.md
paper/: draft.md
scripts/: eval_rough_draft_pipeline.py  generate_deepseek_candidates.py  plot_stage2_curve.py  rank_deepseek_candidates.py  record_deepseek_ranking.py  run_inference.py  train_basin_projector.py  train_code_prior.py  train_codeprior_metric_refiner.py  train_draft_prior.py  train_hier_code_prior.py  train_masked_code_refiner.py  train_prompt_prior.py  train_route_code_prior.py  train_sentence_plan_prior.py  train_stage1.py  train_stage2.py  train_syntax_token_refiner.py  train_vq_decoder_adapter.py  train_vq_latent_tokenizer.py  visualize_1d_to_2d_gaussian.py  visualize_latent_landings.py
src/: __init__.py  inference_stage2_conditional.py  parallel_decoder.py  stage1_inferencen.py  stage2_config.py  stage2_data.py  stage2_eval.py  stage2_losses.py  stage2_riemannian.py
